Add README, improve SEO  and accessibility

--- a/index.html
+++ b/index.html
@@ -4,6 +4,25 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+      name="description"
+      content="Manage your marketing campaigns efficiently. Create, edit, and monitor your campaigns in one place."
+    />
+    <meta name="robots" content="index, follow" />
+    <meta name="author" content="Markiz Plateau" />
+    <link rel="canonical" href="https://futurum-crud-frontend.vercel.app/" />
+
+    <meta property="og:title" content="Futurum Campaign Manager" />
+    <meta
+      property="og:description"
+      content="Manage your marketing campaigns efficiently. Create, edit, and monitor your campaigns in one place."
+    />
+    <meta property="og:type" content="website" />
+    <meta
+      property="og:url"
+      content="https://futurum-crud-frontend.vercel.app/"
+    />
+
     <title>Futurum Task</title>
   </head>
   <body>
